<resources>
    <string name="app_name">NIKE</string>
    <string name="img_desc">img desc</string>
    <string name="nike_slogan">JUST DO IT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="account">Account</string>
    <string name="press_again">Press Again to Exit</string>
    <string name="get_started">GET STARTED</string>
    <string name="temp_title">Testing Title Section</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="up_to_30_discount">Up to \n30% Discount</string>
    <string name="collection">Collection</string>
    <string name="temp_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="temp_category">Category Name</string>
    <string name="temp_price">Rp 1900.000</string>
    <string name="latest_shoes">Latest Shoes</string>
    <string name="basketball_shoes">Basketball Shoes</string>
    <string name="sneakers_shoes">Sneakers Shoes</string>
    <string name="high_tops_shoes">High Tops Shoes</string>
    <string name="check_our_official_store">Check Our \nOfficial Store</string>
    <string name="check_now">Check Now</string>
    <string name="no_data">No Data</string>
    <string name="save_your_favorite_to_buy_later">Save your favorite \nto buy later</string>
    <string name="you_don_t_have_any_favorite_product">You don\'t have any favorite product</string>
    <string name="you_can_add_an_item_to_favorites_by_click_the_heart_icon_in_product">You can add an item to favorites by click the heart icon in product</string>
    <string name="check_our_shoes">Check Our Shoes</string>
    <string name="find_our_masterpiece_in_one_hand">Find our masterpiece \nin One Hand</string>
    <string name="search_result_of">Search result of</string>
    <string name="all_incredible_shoes_can_be_seen_here">All Incredible Shoes \nCan Be Seen Here</string>
    <string name="see_all">See All</string>
    <string name="all_product">All Product</string>
    <string name="show_indicator">container show indicator</string>
    <string name="color">Color</string>
    <string name="temp_rating">4.8</string>
    <string name="stock">Stock</string>
    <string name="temp_stock">190</string>
    <string name="type">Type</string>
    <string name="back">Back</string>
    <string name="copyright">©2021 | Patricia Fiona</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="nike">NIKE</string>
    <string name="about_nike_1">Nike, Inc. is an American multinational corporation that is engaged in the design, development, manufacturing, and worldwide marketing and sales of footwear, apparel, equipment, accessories, and services.
        The company is headquartered near Beaverton, Oregon, in the Portland metropolitan area. It is the world\'s largest supplier of athletic shoes and apparel and a major manufacturer of sports equipment, with revenue in excess of US$37.4 billion in its fiscal year 2020 (ending May 31, 2020).
        As of 2020, it employed 76,700 people worldwide. In 2020 the brand alone was valued in excess of $32 billion, making it the most valuable brand among sports businesses. Previously, in 2017, the Nike brand was valued at $29.6 billion.
        Nike ranked 89th in the 2018 Fortune 500 list of the largest United States corporations by total revenue.</string>
    <string name="about_nike_2">The company was founded on January 25, 1964, as "Blue Ribbon Sports", by Bill Bowerman and Phil Knight,
        and officially became Nike, Inc. on May 30, 1971. The company takes its name from Nike, the Greek goddess of victory.
        Nike markets its products under its own brand, as well as Nike Golf, Nike Pro, Nike+, Air Jordan, Nike Blazers,
        Air Force 1, Nike Dunk, Air Max, Foamposite, Nike Skateboarding, Nike CR7, and subsidiaries including Jordan Brand and Converse.
        Nike also owned Bauer Hockey from 1995 to 2008, and previously owned Cole Haan, Umbro, and Hurley International.
        In addition to manufacturing sportswear and equipment, the company operates retail stores under the Niketown name.
        Nike sponsors many high-profile athletes and sports teams around the world, with the highly recognized trademarks of
        "Just Do It" and the Swoosh logo.</string>
    <string name="buy_the_product">Buy the Product</string>
    <string name="select_europe_size">Select Europe Size</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="details">Details</string>
    <string name="temp_quantity">1</string>
    <string name="temp_address">Rose St. Number 21, Southampton, England</string>
    <string name="oh_no_your_shopping_basket_is_empty">Oh no, your shopping \nbasket is empty</string>
    <string name="come_on_fill_it_with_the_shoes_of_you_dreams">Come on, fill it with the \nshoes of you dreams!</string>
    <string name="size">Size:</string>
    <string name="temp_shoes_size">40 Euro</string>
    <string name="color_2">Color:</string>
    <string name="temp_color_name">Blue Sea</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="remove_from_bag">Remove From Bag</string>
    <string name="update_to_bag">Update to Bag</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="connect_to_buy_our_special_product">Connect to Buy Our Special Product</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="pick_date">Pick Date</string>
    <string name="user_name">User Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_order">My Order</string>
    <string name="see_order_history">See Order History</string>
    <string name="temp_date">12-12-2021</string>
    <string name="logout">Logout</string>
    <string name="edit_your_data">Edit your data</string>
    <string name="insert_new_password_or_your_old_password">Insert new password or your old password</string>
    <string name="reinput_password">Reinput Password</string>
    <string name="transaction_history">Transaction History</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="packed">Packed</string>
    <string name="received">Received</string>
    <string name="onDelivery">On Delivery</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="temp_transaction_id">TSC1234567890</string>
    <string name="pay_now">Pay Now</string>
    <string name="temp_quantity_transaction">1 product</string>
    <string name="total_order">Total order</string>
</resources>